base/openedx/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openedx
  labels:
    app.kubernetes.io/managed-by: argocd
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit:   restricted
    pod-security.kubernetes.io/warn:    restricted
  annotations:
    argocd.argoproj.io/sync-wave: "-10"
