base/openedx/cms-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cms
  namespace: openedx
  labels:
    app: cms
    component: openedx
spec:
  type: ClusterIP
  selector:
    app: cms
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      protocol: TCP
